# nano_gpt_workbook

./: README.md  pyproject.toml
notebooks/: get_gpt.ipynb  makemore.ipynb
