[tool.poetry]
name = "nano-gpt"
version = "0.1.0"
description = "Working through Karpathy's nano-gpt"
authors = ["Kiran <kiran.in@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nano_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
